--- a/simpsons_guests.Rmd
+++ b/simpsons_guests.Rmd
@@ -3,6 +3,8 @@ title: "simpsons_guests"
 author: "Paul Dong"
 date: "2019/9/9"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
@@ -12,10 +14,48 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 library(tidyverse)
 theme_set(theme_light())
-simpsons <- readr::read_delim("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-08-27/simpsons-guests.csv", delim = "|", quote = "")
+simpsons <- readr::read_delim("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-08-27/simpsons-guests.csv", delim = "|", quote = "") %>% 
+  mutate(self = str_detect(role, "sel|selves"))
 ```
 
 ```{r}
-simpsons
+simpsons %>% 
+  count(guest_star, role, sort = T) %>% 
+  filter(role == "Himself" | role == "Herself") # or filter(role %in% c("Himself", "Herself"))
 ```
+
+```{r}
+
+simpsons %>% 
+  count(guest_star, role, sort = T) %>% 
+  filter(str_detect(role, "sel")) %>% 
+  View
+```
+
+```{r}
+simpsons %>% 
+  filter(self) %>% 
+  count(guest_star, sort = T) %>% 
+  # arrange(n) %>% 
+  filter(n>1) %>% 
+  mutate(guest_star = fct_reorder(guest_star, n)) %>% 
+  ggplot(aes(guest_star, n))+
+  geom_col()+
+  coord_flip() +
+  labs(title = "Who has played themselves in multiple Simpsons episodes?")
+```
+
+Has the frequency of guest stars changed with time?
+
+```{r}
+simpsons %>% 
+  separate_rows(role, sep = ";\\s+") %>% 
+  add_count(role) %>% 
+  filter(n>10) %>% 
+  count(season, role) %>% 
+  ggplot(aes(season, n)) +
+  geom_col()+
+  facet_wrap(~role, ncol = 1)
+```
+
 
