--- a/good examples/2019_34_NuclearExplosions.Rmd
+++ b/good examples/2019_34_NuclearExplosions.Rmd
@@ -6,12 +6,13 @@ output:
   html_document:
   theme: paper
 highlight: kate
+dev: cairo_pdf
 editor_options:
   chunk_output_type: console
 ---
   
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, dev = "cairo_pdf")
 ```
 
 ```{r prep, message=FALSE}
